--- a/build.yaml
+++ b/build.yaml
@@ -13,7 +13,7 @@
 #
 ---
 include:
-  - board: nrfmicro_13
-    shield: corne_left
-  - board: nrfmicro_13
-    shield: corne_right
+  - board: nice_nano_v2
+    shield: tien_left
+  - board: nice_nano_v2
+    shield: tien_right
