--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: tien_left
+    shield: corne_left
   - board: nice_nano_v2
-    shield: tien_right
+    shield: corne_right
